--- a/packages/node--test-reporter-github/package.yaml
+++ b/packages/node--test-reporter-github/package.yaml
@@ -54,6 +54,7 @@ devDependencies:
   github-markdown-css: ^5.6.1
   jsdom: ^24.1.1
   pageres-cli: ^8.0.0
+  replace-in-file: ^8.1.0
   yaml: ^2.5.0
 
 scripts:
