--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ${{ fromJson(format('[{0}]', inputs.node-version || '20, 21, 22')) }}
+        node-version: ${{ fromJson(format('[{0}]', inputs.node-version || '20, 21, 22, 23')) }}
 
     env: # https://nodejs.org/api/test.html#test-reporters
       NODE_OPTIONS: --test-reporter=spec --test-reporter-destination=stdout
