--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 # https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions
 name: CI
 on:
+  workflow_dispatch:
   push:
     branches: [main]
 
