--- a/packages/node-test-parser/package.yaml
+++ b/packages/node-test-parser/package.yaml
@@ -1,7 +1,7 @@
 # https://docs.npmjs.com/cli/configuring-npm/package-json
 $schema: https://json.schemastore.org/package
 version: 0.0.0
-name: node--test-parser
+name: "@danielbayley/node-test-parser"
 description: Parse events from node --test into a more useable data structure.
 keywords:
 - test
