--- a/packages/node-test-reporter-github/package.yaml
+++ b/packages/node-test-reporter-github/package.yaml
@@ -48,14 +48,14 @@ dependencies:
   node-test-parser: workspace:*
 
 devDependencies:
-  "@danielx/civet": ^0.7.19
+  "@danielx/civet": &catalog catalog:default
   "@testing-library/dom": ^10.4.0
   capture-website-cli: ^4.0.0
   github-markdown-css: ^5.6.1
-  jsdom: ^24.1.1
+  jsdom: *catalog
   pageres-cli: ^8.0.0
-  replace-in-file: ^8.1.0
-  yaml: ^2.5.0
+  replace-in-file: *catalog
+  yaml: *catalog
 
 publishConfig:
   access: public
