--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,10 @@
+# https://pnpm.io/pnpm-workspace_yaml
 packages:
 - packages/*
+
+# https://pnpm.io/catalogs
+catalog:
+  "@danielx/civet": ^0.7.19
+  jsdom: ^24.1.1
+  replace-in-file: ^8.1.0
+  yaml: ^2.5.0
