ci,test,fix: script

--- a/package.yaml
+++ b/package.yaml
@@ -48,4 +48,4 @@ devDependencies:
 scripts:
   pnpm:devPreinstall: yq --output-format json package.yaml > package.json
   postinstall: node index.js >> $GITHUB_OUTPUT
-  test: pnpm --recursive test --stream --reporter-hide-prefix
+  test: pnpm --stream --reporter-hide-prefix --recursive test
