--- a/packages/node-test-reporter-github/package.yaml
+++ b/packages/node-test-reporter-github/package.yaml
@@ -45,7 +45,7 @@ packageManager: pnpm@10.2.1
 
 dependencies:
   "@actions/core": ^1.10.1
-  "@danielbayley/node-test-parser": workspace:*
+  "@danielbayley/node-test-parser": workspace:^
 
 devDependencies:
   "@danielx/civet": &catalog catalog:default
