--- a/packages/node-test-reporter-github/package.yaml
+++ b/packages/node-test-reporter-github/package.yaml
@@ -56,12 +56,7 @@ devDependencies:
 scripts:
   prepare: yaml --single --json --indent ${TABSIZE:-2} < package.yaml > package.json
   pretest: pnpm prepare
-  test: >-
-    node
-    --test-reporter spec
-    --test-reporter-destination stdout
-    --experimental-test-coverage
-    --test test/unit.js
+  test: node --experimental-test-coverage --test test/unit.js
 
   prepublishOnly: |
     mkdir -p build
