deps: add `publint`

--- a/packages/node-test-parser/package.yaml
+++ b/packages/node-test-parser/package.yaml
@@ -38,7 +38,8 @@ engines:
 packageManager: pnpm@10.2.1
 
 devDependencies:
-  yaml: catalog:default
+  publint: &catalog catalog:default
+  yaml:    *catalog
 
 config: *directories
 scripts:
