--- a/node-test-parser/package.yaml
+++ b/node-test-parser/package.yaml
@@ -1,5 +1,4 @@
 # https://docs.npmjs.com/cli/configuring-npm/package-json
-$schema: https://json.schemastore.org/package
 version: 0.0.0
 name: "@danielbayley/node-test-parser"
 description: Parse events from node --test into a more useable data structure.
@@ -11,9 +10,9 @@ keywords:
 - coverage
 - data
 
-homepage: https://github.com/danielbayley/npm-package-ci/tree/main/packages/node-test-parser#readme
+homepage: https://github.com/danielbayley/npm-package-ci/tree/main/node-test-parser#readme
 repository: danielbayley/npm-package-ci
-bugs: https://github.com/danielbayley/npm-package-ci/tree/main/packages/node-test-parser/issues
+bugs: https://github.com/danielbayley/npm-package-ci/tree/main/node-test-parser/issues
 
 author:
   name: Daniel Bayley
@@ -31,19 +30,27 @@ exports: *index
 files: [*index]
 directories: &directories
   fixtures: ./test/fixtures
-
+publishConfig:
+  access: public
 engines:
   node: ">=20"
   pnpm: ">=10"
-packageManager: pnpm@10.2.1
+devEngines:
+  packageManager:
+    name: pnpm
+    version: ">=10"
+  runtime:
+    name: node
+    version: ">=22.13"
+packageManager: pnpm@10.4.1
 
 devDependencies:
-  publint: &catalog catalog:default
-  yaml:    *catalog
+  publint: catalog:default
+  utils: workspace:^
 
 config: *directories
 scripts:
-  prepare: yaml --single --json --indent ${TABSIZE:-2} < package.yaml > package.json
+  prepare: node --import utils/scripts/prepare
 
   test: node --experimental-test-coverage --test test/unit.js
   pretest: >-
@@ -53,13 +60,17 @@ scripts:
     --experimental-test-coverage
     --test $npm_package_config_fixtures/tests.js || true
 
+  release: pnpm version --force --no-git-tag-version
+  postrelease: pnpm publish
+
+  prepublishOnly: publint
   version: |
     sed -i "" -E "s/^(version: *)$npm_old_version\$/\\1$npm_new_version/" package.yaml
-    git commit --all --message $npm_package_version
+    git commit --message $npm_new_version package.yaml
   postversion: |
-    git tag --annotate v$npm_package_version -m ""
+    git tag  --annotate $npm_new_version --message v$npm_new_version
     git push --follow-tags
 
-  prerelease: git stash --all --include-untracked --keep-index --quiet
-  release: pnpm test && pnpm version
-  postrelease: pnpm publish && git stash pop --index --quiet
+  watch: pnpm test --watch
+  reinstall: pnpm zap && pnpm install
+  zap: rm -rf node_modules/
