--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,8 @@
 # https://pnpm.io/pnpm-workspace_yaml
 packages:
-- packages/*
+- node-test-*
+- utils
+- metadata
 
 # https://pnpm.io/catalogs
 catalog:
