--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,5 @@
 # https://docs.npmjs.com/cli/configuring-npm/package-json
-#$schema: https://json.schemastore.org/package
-name: npm-package-ci #&name
+name: npm-package-ci
 description: Simple CI for your npm packages.
 keywords:
 - ci
@@ -33,13 +32,6 @@ engines:
 packageManager: pnpm@10.13.1
 pnpm:
   requiredScripts: [prepare, test]
-  # TODO https://pnpm.io/config-dependencies#loading-an-allow-list-of-built-dependencies
-  #onlyBuiltDependencies: #File: node_modules/@danielbayley/TODO.json
-  #- *name
-  #- jsdom
-  #- "@danielbayley/node-test-parser"
-  #- node-test-reporter-github
-  #- utils
 
 dependencies:
   node-test-reporter-github: workspace:^
@@ -50,17 +42,12 @@ devDependencies:
   utils: workspace:^
 
 scripts:
-  #pretest: node --test test/unit.js TODO
-  test: pnpm --stream --reporter-hide-prefix --recursive test
   prepare: pnpm --recursive prepare
   pnpm:devPreinstall: yq --output-format json package.yaml > package.json
   postinstall: node index.js
 
+  test: pnpm --stream --reporter-hide-prefix --recursive test
+
   reinstall: pnpm zap && pnpm install
-  clean: rm -f {*,.}/package.json **/fixtures/*.json || true #*/build #pnpm --recursive clean
-  zap: pnpm clean && rm -rf **/node_modules || true  #pnpm --recursive zap
-
-
-# TODO promote
-# https://x.com/search?q=from%3Amattpocockuk%20corepack&src=typed_query
-# https://github.com/actions/setup-node/issues/1222#issuecomment-2649754743
+  clean: rm -f {*,.}/package.json **/fixtures/*.json || true
+  zap: pnpm clean && rm -rf **/node_modules || true
