--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,5 @@
 # https://docs.npmjs.com/cli/configuring-npm/package-json
+version: 0.0.0
 name: npm-package-ci
 description: Simple CI for your npm packages.
 keywords:
