--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,3 +61,14 @@ jobs:
       run: ${{ steps.node.outputs.test }}
       env:
         NODE_OPTIONS: ${{ env.NODE_OPTIONS }} ${{ steps.node.outputs.options }}
+
+  Clean:
+    runs-on: ubuntu-latest
+    if: github.repository == format('{0}/{1}', github.repository_owner, 'npm-package-ci')
+    steps:
+    - name: Clean
+      run: gh run delete `gh run list --workflow ci.yml --json databaseId --jq '.[0].databaseId'`
+      continue-on-error: true
+      env:
+        GH_TOKEN: ${{ github.token }}
+        GH_REPO:  ${{ github.repository }}
