config: update `funding` sponsor links

--- a/node-test-reporter-github/package.yaml
+++ b/node-test-reporter-github/package.yaml
@@ -20,7 +20,7 @@ author:
   url: danielbayley.dev
 
 license: MIT
-funding: https://github.com/sponsors/danielbayley
+funding: https://github.com/danielbayley/npm-package-ci?sponsor=1
 
 type: module
 imports:
