--- a/node-test-parser/package.yaml
+++ b/node-test-parser/package.yaml
@@ -22,7 +22,7 @@ author:
   url: danielbayley.dev
 
 license: MIT
-funding: https://github.com/sponsors/danielbayley
+funding: https://github.com/danielbayley/npm-package-ci?sponsor=1
 
 type: module
 imports:
